--- a/src/main_style.css
+++ b/src/main_style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
 #world{
@@ -10,6 +11,116 @@
     overflow: hidden;
     background: linear-gradient(#e4e0ba, #f7d9aa);
 }
+
+/* ----- Navigation bar ----- */
+nav img{
+    width: 50px;
+    position: fixed;
+    z-index: 10;
+}
+nav{
+    display: flex;
+    padding: 2% 6%;
+    justify-content: space-between;
+}
+.nav-links{
+    flex: 1;
+    text-align: right;
+    z-index: 15;
+}
+.nav-links ul li{
+    list-style: none;
+    display: inline-block;
+    padding: 8px 12px;
+    position: relative;
+}
+.nav-links ul li a{
+    color: #777;
+    text-decoration: none;
+    font-size: 13px;
+}
+.nav-links ul li::after{
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: #f44336;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+}
+.nav-links ul li:hover::after{
+    width: 100%;
+}
+
+/* ----- Title ----- */
+@media only screen and (max-width: 900px) {
+    .title-cont{
+        position: absolute;
+        top: 25%;
+        left: 20%;
+        width: 60%;
+        height: 20%;
+    }
+    .sub-title{
+        font-size: 1rem;
+        color: #fbfaf5;
+    }
+    .p-title{
+        font-size: 1.5rem;
+    }
+}
+.title-cont{
+    position: absolute;
+    top: 7.5%;
+    left: 20%;
+    width: 60%;
+    height: 30%;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+}
+.sub-title{
+    font-size: 2rem;
+    color: #fbfaf5;
+}
+.p-title {
+    transition: 2s;
+    margin: 0 auto 0 auto;
+    font-family: 'Lato', sans-serif;
+    line-height: 3rem;
+    font-size: 2.5rem;
+    padding: 50px 50px;
+    text-align: center;
+    text-transform: uppercase;
+    text-rendering: optimizeLegibility;
+    color: #95b0cc;
+    letter-spacing: .1em;
+    text-shadow: 
+    -1px -1px 1px #efede3, 
+    0px 1px 0 #2e2e2e, 
+    0px 2px 0 #2c2c2c, 
+    0px 3px 0 #2a2a2a, 
+    0px 4px 0 #282828, 
+    0px 5px 0 #262626, 
+    0px 6px 0 #242424, 
+    0px 7px 0 #222, 
+    0px 8px 0 #202020, 
+    0px 9px 0 #1e1e1e, 
+    0px 10px 0 #1c1c1c, 
+    0px 11px 0 #1a1a1a, 
+    0px 12px 0 #181818, 
+    0px 13px 0 #161616, 
+    0px 14px 0 #141414, 
+    0px 15px 0 #121212,
+    2px 20px 5px rgba(0, 0, 0, 0.9),
+    5px 23px 5px rgba(0, 0, 0, 0.3),
+    8px 27px 8px rgba(0, 0, 0, 0.5),
+    8px 28px 35px rgba(0, 0, 0, 0.9);
+    z-index: 10;
+}
+
+/* ----- Custom Setting buttons ----- */
 .container:before{
     position: absolute;
     background: inherit;
@@ -97,28 +208,97 @@
 /* ----- Gauge meters ----- */
 #myChart {
     height: 100%;
-    width: 25%;
+    width: 20%;
     position: absolute;
-    top: 10%
+    top: 10%;
+    left:0.5%;
 }
 #myChart1 {
     height: 100%;
-    width: 25%;
+    width: 20%;
     position: absolute;
-    top: 25%
+    top: 25%;
 }
 #myChart2 {
     height: 100%;
-    width: 25%;
+    width: 20%;
     position: absolute;
-    top: 40%
+    top: 40%;
 }
 #compass {
     height: 100%;
-    width: 25%;
+    width: 20%;
     position: absolute;
-    top: 55%
+    top: 55%;
 }
 .zc-ref {
     display: none;
+}
+
+/* ----- Footer Section ----- */
+footer{
+    background: #111;
+    height: auto;
+    width: 100vw;
+    padding-top: 40px;
+    color: #fff;
+    top: 100%;
+    position: absolute;
+    overflow-y: hidden;
+}
+.footer-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+.footer-content h3{
+    font-size: 1.8rem;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 3rem;
+}
+.footer-content p{
+    max-width: 500px;
+    margin: 10px auto;
+    line-height: 28px;
+    font-size: 14px;
+}
+.socials{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 3rem 0;
+}
+.socials li{
+    margin: 0 10px;
+}
+.socials a{
+    text-decoration: none;
+    color: #fff;
+}
+.socials a i{
+    font-size: 1.1rem;
+    transition: color .4s ease;
+}
+.socials a:hover i{
+    color: aqua;
+}
+.footer-bottom{
+    background: #000;
+    width: 100vw;
+    padding: 20px 0;
+    text-align: center;
+}
+.footer-bottom p{
+    font-size: 14px;
+    word-spacing: 2px;
+    text-transform: capitalize;
+}
+.footer-bottom span{
+    text-transform: uppercase;
+    opacity: .4;
+    font-weight: 200;
 }
